--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "AmirHossein207 Masroor"
-  avatar           : "AMasroor.jpg"
+  avatar           : "AMasroor.jpeg"
   bio              : "Student pursuing bioinformatics, metabolic engineering, and computational science"
   location         : #""
   employer         :
