--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@ main:
   - title: "Research"
     url: /research/
     
-  - title: "Publications"
-    url: /publications/
+  #- title: "Publications"
+  #  url: /publications/
 
   #- title: "Talks"
    # url: /talks/    
@@ -14,8 +14,8 @@ main:
    # url: /teaching/    
 
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  #- title: "Blog Posts"
+   # url: /year-archive/
     
   #- title: "CV"
   # url: /cv/
