--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "AmirHossein207 Masroor"
+  name             : "Amirhossein Masroor"
   avatar           : "AMasroor.jpeg"
   bio              : "Student pursuing bioinformatics, metabolic engineering, and computational science"
   location         : #""
